js logic built and implimented

--- a/style.css
+++ b/style.css
@@ -64,3 +64,18 @@ ul{
 #color-1{
     background: green;
 }
+#color-2{
+    background: blue;
+}
+#color-3{
+    background: red;
+}
+#color-4{
+    background: orange;
+}
+#color-5{
+    background: yellow;
+}
+#color-6{
+    background: purple;
+}
