now we can select what color we want to fill in our grid

--- a/style.css
+++ b/style.css
@@ -62,20 +62,20 @@ ul{
     font-weight: 500;
 }
 #color-1{
-    background: green;
+    background-color: green;
 }
 #color-2{
-    background: blue;
+    background-color: blue;
 }
 #color-3{
-    background: red;
+    background-color: red;
 }
 #color-4{
-    background: orange;
+    background-color: orange;
 }
 #color-5{
-    background: yellow;
+    background-color: yellow;
 }
 #color-6{
-    background: purple;
+    background-color: purple;
 }
