--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
     justify-content: center;
     align-items: center;
     height: 10vh;
+   
 }
 .Parent{
     display: flex;
@@ -93,4 +94,7 @@ ul{
 }
 #color-6{
     background-color: purple;
+}
+.colors{
+    border-radius: 50%;
 }
